feat(issue-19): добавлено подтверждение регистрации
