# internal/controller/http/router.go
@@ -36,6 +36,7 @@ func (h *HTTP) startRouting() {
 	h.router.GET("/api/v1/health", h.v1.CheckHealth)
 
 	h.router.POST("/api/v1/registrations", h.v1.CreateRegistration)
+	h.router.PATCH("/api/v1/registrations", h.v1.ConfirmRegistration)
 
 	h.router.GET("/api/v1/users", h.v1.GetUsers)
 	h.router.GET("/api/v1/users/:id", h.v1.GetUser)
